[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/forge/DeliveryPanel.gd" id="1"]

[node name="DeliveryPanel" type="Control"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(220, 320)
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -240.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = 360.0
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
separation = 6.0

[node name="TitleLabel" type="Label" parent="Panel/Margin/VBox"]
text = "¿Qué hacer con el ítem?"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Panel/Margin/VBox"]
size_flags_vertical = 4
alignment = 1
separation = 12.0

[node name="ClientButton" type="Button" parent="Panel/Margin/VBox/Buttons"]
unique_name_in_owner = true
text = "Entregar a Cliente
(Recibir oro)"

[node name="HeroButton" type="Button" parent="Panel/Margin/VBox/Buttons"]
unique_name_in_owner = true
text = "Equipar en Héroe
(Mejorar stats)"
unique_name_in_owner = true
text = "Cerrar"
